// Copyright (C) 2020 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package vulkan_pb;
option go_package = "github.com/google/gapid/gapis/api/vulkan/vulkan_pb";

message ExternalBufferData {
  uint64 buffer = 1;
  uint64 buffer_offset = 2;
  uint64 data_offset = 3;
  uint64 size = 4;
  uint32 submit_index = 5;
  uint32 command_buffer_index = 6;
}

message ExternalMemoryData {
  sint64 res_index = 1;
  sint64 res_size = 2;
  repeated ExternalBufferData buffers = 3;
}

message SemaphoreState {
  repeated uint64 semaphores = 1;
  repeated uint64 values = 2;
}
